switch from JNA to panama (#7)
* Java upgraded to 22
* Kotlin upgraded to 2.0.0
* Gradle upgraded to 8.8RC2